# agentic-browser

./: .gitignore  CLAUDE.md  PINNED_CHROMIUM  README.md
agent-backend/: .env.example  KID-MAC-SETUP.md  README.md  guardian_profiles.example.json  pyproject.toml
agent-backend/claude-config/: .gitignore  .mcp.json  CLAUDE.md  settings.json
agent-backend/deploy/: guardian.launchd.plist.template  guardian.systemd.service.template  kid-bootstrap.command.template
agent-backend/scripts/: configure-ai-provider.sh  install-extension-policy.sh  install-guardian-service.sh  install-guardian.command  kid-update-check.sh  launch-chromium.sh  launch-guardian.sh  pack-extension.sh  release-chromium.sh  run-agent.sh  serve-mcp.sh  uninstall-extension-policy.sh  uninstall-guardian-service.sh  uninstall-kid.sh  update-guardian.sh  verify-parental-control.sh  verify_block_e2e.py
agent-backend/src/agent_backend/: __init__.py  config.py
agent-backend/src/agent_backend/browser/: controller.py  errors.py  locate.py  snapshot.py
agent-backend/src/agent_backend/guardian/: __init__.py  __main__.py  access_requests.py  blocklist.py  cache.py  classifier.py  config.py  event_log.py  fsio.py  home.html  keyword_store.py  metrics.py  normalize.py  pin_store.py  prize_points.py  profile_manager.py  profiles.py  prompt.py  review.html  rubric.py  runtime.py  (+8 more)
agent-backend/tests/: conftest.py
agent-backend/tests/frontend/: activity.test.cjs  rules.test.cjs  store.test.cjs  summary.test.cjs  time-core.test.cjs
agent-backend/tests/integration/: test_controller.py
agent-backend/tests/unit/: test_cli.py  test_codex_runner.py  test_config.py  test_locate.py  test_mcp_server.py  test_runner.py  test_runner_factory.py  test_snapshot.py
config/: args.gn
(+150 files in other folders)
