target_cpu = "arm64"
is_debug = false
is_component_build = true
symbol_level = 0

# Bound peak link memory on this 18 GB machine: one heavy link at a time.
# The auto heuristic (build/toolchain/get_concurrent_links.py) would allow 4
# concurrent links at ~4 GB each with 0 GB reserved for the OS, which can OOM
# the host. Component build keeps each link small; this caps overlap to be safe.
concurrent_links = 1
